Fix overlapping layer for accessibility

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -114,6 +114,7 @@ footer {
                 }
 
                 .menu-display {
+                    visibility: hidden;
                     position: fixed;
                     left: -150%;
                     top: 0;
@@ -124,6 +125,7 @@ footer {
                     transition: left 0.5s ease, background-color 0.5s ease;
 
                     &.is-open {
+                        visibility: visible;
                         left: 0;
                         background-color: rgba(0, 0, 0, 0.95);
                     }
@@ -137,6 +139,7 @@ footer {
                         background-color: $background-secondary;
                         opacity: 1;
                         transition: opacity 0.5s ease;
+                        
 
                         .menu-display:not(.is-open) & {
                             background-color: transparent;
